Fix toggle alignment and spacing

--- a/public/css/gdpr-cookie-consent-frontend.css
+++ b/public/css/gdpr-cookie-consent-frontend.css
@@ -52,6 +52,7 @@
 }
 .gdprmodal-content {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  font-size: 13px;
 }
 .table {
   color: #212529;
